--- a/components/css/sass/_common.scss
+++ b/components/css/sass/_common.scss
@@ -14,11 +14,12 @@
 body {
   background: $white;
   font-family: $bodyFont;
+  font-size: $bodyFont-font-size;
+  line-height: $bodyFont-line-height;
   overflow-y: auto;
   -webkit-backface-visibility: hidden;
   /*-webkit-perspective: 1000;*/
-  font-size: 1em;
-  line-height: 1.5;
+
   color: $grey;
 
 
@@ -37,11 +38,11 @@ h1, h2, h3, h4, h5, h6 {
   font-family: $bodyFont;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.4;
+  line-height: $bodyFont-line-height;
   margin: 20px 0 15px;
 }
 h1 {
-  font-size: 43px;
+  font-size: 35px;
   line-height: 1.1;
   font-family: $headFont;
   text-transform: uppercase;
@@ -55,7 +56,7 @@ h2 {
   margin-top: 5px;
 }
 h3 { font-family: $bodyFont; font-style: normal; font-weight: 700; font-size: 21px; }
-h3.alternate { font-family: $headFont; text-transform: uppercase; margin-bottom:0px;}
+h3.alternate { font-family: $headFont; text-transform: uppercase; margin-bottom:0;}
 h3.section-header {
   font-family: $headFont;
   font-size: 2.2em;
@@ -67,9 +68,9 @@ h3.section-header {
   padding-bottom: 20px;
   background-color: #4e749e;
   margin-top: 15px;
-  margin-right: 0px;
+  margin-right: 0;
   margin-bottom: 15px;
-  margin-left: 0px;
+  margin-left: 0;
 }
 h4 {
   font-family: $bodyFont;
@@ -83,100 +84,69 @@ h5 { font-family: $bodyFont; font-style: normal; font-weight: 700; font-size: 14
 a {
   text-decoration: none;
   color: $blue;
+  &:hover { color: $maroon; }
 }
-a:hover { color: $maroon; }
-.main a:hover {text-decoration: underline;}
-
 em { font-style: italic;}
 strong {  
   font-weight: 700;
 }
 p {
-  line-height: 1.8;
   margin: 15px 0 20px;
+
+  .intro {
+    font-family: $headFont;
+    font-size: 22px;
+    line-height: 1.5;
+    margin: 20px 0;
 }
-p.intro {
-  font-family: $headFont;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 22px;
-  line-height: 1.5;
-  margin: 20px 0;
 }
 
-
-.tight, p.tight {margin:0px; padding:0px;}
+.tight, p.tight {margin:0; padding:0;}
 
 /* LISTS*/
 
 ol, ul {
   color: #726C66;
-  margin: 0px 0px 20px 10px;
+  margin: 0 0 20px 10px;
 }
 
-ol { counter-reset: term; }
-ol li { list-style: none; }
-ol li:before {
-  color: $maroon;
-  counter-increment: term;
-  content: counter(term) ". ";
-  margin: 0 5px 0 -20px;
-  text-align: right;
+ol {
+  counter-reset: term;
+  li { list-style: none; }
+  li:before {
+    color: $maroon;
+    counter-increment: term;
+    content: counter(term) ". ";
+    margin: 0 5px 0 -20px;
+    text-align: right;
+  }
 }
-
-ul { counter-reset: term; }
-ul li { list-style: none; }
-ul li:before {
-  background: transparent;
-  background-color: $maroon;
-  border-radius: 100%;
-  content: '';
-  display: block;
-  float: left;
-  height: 5px;
-  margin: 10px 2px 0 -20px;
-  width: 5px;
+ul {
+  counter-reset: term;
+  li { list-style: none; }
+  li:before {
+    background-color: $maroon;
+    border-radius: 100%;
+    content: '';
+    display: block;
+    float: left;
+    height: 5px;
+    margin: 10px 2px 0 -20px;
+    width: 5px;
+  }
+  &.nobullets {
+    margin: 0;
+    padding: 0;
+    li:before {
+      display: none;
+      margin: 0;
+      padding: 0;
+      width: 0;
+    }
+  }
 }
-
 li { margin-bottom: 10px; }
 
-blockquote {
-  font-family: $bodyFont;
-  font-style: italic;
-  padding-top: 0px;
-  padding-right: 20px;
-  padding-bottom: 5px;
-  padding-left: 25px;
-  border-left-width: 4px;
-  border-left-style: solid;
-  border-left-color: #A04D31;
-  font-size: 110%;
-  color: #A04D31;
-  margin-top: 2em;
-  margin-bottom: 2em;
-  margin-right: 0px;
-  margin-left: 0px;
-}
-blockquote .author {
-  font-size: 80%;
-  font-style: normal;
-  display: block;
-  color: #5f5954;
-  margin-top: 0.6em;
-}
-blockquote .author a {
-  color: #5f5954;
-  font-weight: bold;
-}
-blockquote .author:before {
-  content: '\2014';
-  width:20px;}
-blockquote img.testimonial-image {
-  border: 10px solid #A04D31;
-  border-radius: 50%;
-  float: right;
-  margin-left: 1em;
-}
 .two-columns, article.two-columns, ul.two-columns {
   -webkit-columns: 2 200px;
   -moz-columns: 2 200px;
@@ -185,9 +155,7 @@ blockquote img.testimonial-image {
 ul.two-columns li { margin-left:1.5em;}
 
 hr {
-  border: 1px solid #F3F5F5;
-  border-bottom-color: $white;
-  border-width: 1px 0;
+  border-bottom-color:solid $white 1px;
 }
 
 .row { position: relative; }
@@ -208,9 +176,6 @@ hr {
 }
 
 .no_results { font-size: 22px; font-family: $bodyFont; font-style: italic; font-weight: 400; margin: 30px 0; }
-
-picture,
-picture img { display: block; }
 
 img.round { border-radius:3px;}
 
@@ -262,7 +227,7 @@ img.round { border-radius:3px;}
 .clear {
   clear: both;
 }
-.clearfix:before, clearfix:after { content: ""; display:table; }
+.clearfix:before, .clearfix:after { content: ""; display:table; }
 
 .clearfix { zoom:1; }
 
@@ -366,7 +331,7 @@ h2 a.jumplink {
   font-family: $bodyFont;
   margin-left: 30px;
   text-transform: capitalize;
-  margin-top:0px; text-shadow:none;
+  margin-top:0; text-shadow:none;
 
 }
 h2 a.jumplink:after {
@@ -425,6 +390,11 @@ h2 a.jumplink:after {
   margin-bottom: 20px;
   margin-left: 0;
   float: none;
+  @media screen and (max-width: $break-medium-large) {
+    width: 99%;
+    height: auto;
+  }
+
 }
 
 /* NAVIGATION */
@@ -436,107 +406,140 @@ h2 a.jumplink:after {
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
   position: relative;
   z-index: 35;
+  a:hover {
+    color: $maroon;
+  }
+  .table { width: 100%; }
+  .block { position: relative; }
+  .item {
+    color: $black;
+    font-family: $headFont;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    height: 55px;
+    line-height: 55px;
+    padding: 0 20px;
+    position: relative;
+    text-align: center;
+    text-transform: uppercase;
+    @media screen and (max-width: $break-medium) {
+      display: block;
+      text-align: left;
+      padding: 0 10px;
+    }
+    @media screen and (max-width: $break-small) {
+      //padding: 1em 0;
+    }
+  }
 }
-#navigation .table { width: 100%; }
-#navigation .block { position: relative; }
-#navigation .item {
-  color: $black;
-  //display: block;
-  font-family: $headFont;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  height: 55px;
-  line-height: 55px;
-  padding: 0 20px;
-  position: relative;
-  text-align: center;
-  text-transform: uppercase;
+.navigation {overflow: hidden; }
+.navigation-handle {
+  display: none;
 }
-#navigation .item.active, #navigation .item:hover {
-  color: $black;
-}
-
-#navigation .td:hover .item,
-#navigation .td .item:hover{
-  background: $dark-grey;
-  z-index: 2;
+.fs-navigation-toggle-handle.fs-navigation-enabled {
+  background: $gold;
+  border: $white;
   color: $white;
+  font-family: $headFont;
+  font-size: $bodyFont-font-size *1.2;
+  font-weight: $regular;
+  -moz-border-radius-bottomleft: 0;
+  border-bottom-right-radius: 0;
+  -moz-border-radius-bottomright: 0;
+  border-bottom-left-radius: 0;
+
+}
+.fs-navigation-handle.fs-navigation-enabled:after {
+  background: $white;
+  box-shadow: 0 5px 0 $white, 0 -5px 0 $white;
+}
+.fs-navigation-handle.fs-navigation-open:after {
+  background: transparent;
+  color: $white;
+  box-shadow: 0;
 }
 
-
-/*----------- FOOTER ----------------*/
+  /*----------- FOOTER ----------------*/
 
 
 /* */
 #footer {
   overflow: hidden;
   width: 100%;
-  box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.5);
-  border-top-width: 1px;
-  border-top-style: solid;
-  border-top-color: #999999;
   color: $light-grey;
-  font-size: 0.8em;
+  font-size: $bodyFont-font-size * 0.9;
+  margin-top: 30px;
   background-color: $dark-grey;
   background-image: url(../images/black-pattern.png);
   background-repeat: repeat;
-}
-#footer .row { padding: 20px 0; }
 
-#footer .address { color: $white; }
-#footer h4 {
-  color: $light-grey;
-  font-family: $headFont;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 1.4em;
-  text-transform: uppercase;
-}
-#footer h4.left { float: left; }
+  .address {
+    color: $white;
+    margin-top: 50px;
+    @media screen and (max-width: $break-medium) {
+      margin-top: 10px;
+    }
+  }
 
-#footer a {
-  color: $white;
-  display: block;
-  line-height: 1.5;
-  margin: 0 30px 0 0;
-  padding: 0 0 3px;
-}
-#footer a:hover {
-  color: $ui-gold;
-}
-#footer .social { margin-top: 15px; }
-#footer .social_link { border: none; margin: 0 2% 0 0; width: 30%; }
+  h4 {
+    color: $light-grey;
+    font-family: $headFont;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.4em;
+    text-transform: uppercase;
+  }
+  h4.left { float: left; }
 
-#footer .phone-number a {
-  color: $white;
+  a {
+    color: $white;
+    display: block;
+    margin: 0 30px 0 0;
+    padding: 0 0 3px;
+    text-decoration: none;
+  }
+  a:hover {
+    color: $ui-gold;
+  }
+  .phone-number a {
+    color: $white;
+  }
+  .footer-logo {
+    margin: 40px auto 20px;
+    text-align: center;
+    @media screen and (max-width: $break-medium) {
+      text-align: left;
+      margin: 15px auto;
+    }
+  }
 }
-
 #postfooter {
-  font-size: 13px;
-  padding: 0;
+  font-size: $bodyFont-font-size * 0.8;
+  padding: 20px 0;
   text-transform: uppercase;
-  border-top-width: 1px;
-  border-top-style: solid;
-  border-top-color: #555555;
+  border-top: solid 1px rgba($subtle-grey, .2);
   text-align: center;
-}
-#postfooter a {
-  color: $light-grey;
-  display: inline-block;
-  height: 55px;
-  margin: 0 30px 0 0;
-}
-#postfooter a:hover {
-  color: $ui-gold;
-}
-#postfooter .copyright {
-  display: inline-block;
-  text-align: right;
-  color: $light-grey;
-  margin-bottom: 15px;
-}
+  margin: 30px 0;
 
+  a {
+    color: $light-grey;
+    display: inline-block;
+    margin: 0 30px 0 0;
+  }
+  a:hover {
+    color: $ui-gold;
+  }
+  .copyright {
+    display: inline-block;
+    text-align: right;
+    color: $light-grey;
+    margin-bottom: 15px;
+    @media screen and (max-width: $break-medium) {
+      text-align: center;
+    }
+  }
+}
 /* -------------- BACK TO TOP BUTTON -----------------*/
 .back-top {
   display: inline-block;
