Add Templates folder for footer and header includes.

--- a/components/output/site.css
+++ b/components/output/site.css
@@ -2306,7 +2306,6 @@ h2 a.jumplink:after {
   width: 100%;
   color: #b1b1b4;
   font-size: 13.5px;
-  margin-top: 30px;
   background-color: #353535;
   background-image: url(../images/black-pattern.png);
   background-repeat: repeat; }
@@ -2406,7 +2405,7 @@ h2 a.jumplink:after {
 
 /* PAGE - MAIN COPY*/
 section.page {
-  padding: 30px 0 0;
+  padding: 30px 0;
   overflow: hidden;
   background-color: #F5F5F5;
   background-image: url(../images/paper_fibers.png);
