--- a/components/css/sass/_page.scss
+++ b/components/css/sass/_page.scss
@@ -1,6 +1,6 @@
 /* PAGE - MAIN COPY*/
 section.page {
-  padding: 30px 0 0;
+  padding: 30px 0;
   overflow: hidden;
   background-color: #F5F5F5;
   background-image: url(../images/paper_fibers.png);
