--- a/components/css/sass/_page.scss
+++ b/components/css/sass/_page.scss
@@ -8,7 +8,12 @@ section.page {
   position: relative;
 
   img { max-width: 100%;}
-  a { text-decoration: underline;}
+  a {
+    text-decoration: underline;
+    &.btn {
+      text-decoration: none;
+      }
+  }
 
 }
 .breadcrumbs {
