--- a/components/templates/welcome.html
+++ b/components/templates/welcome.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Welcome Screen for SalesForce" />
     <meta name="author" content="Tippie College of Business" />
 
-    <title>Tippie Student Portal - Enrollment RX Welcome Hi!Hi! </title>
+    <title>Welcome - Tippie Student Portal</title>
 
     @@include('header.tpl.html')
 
