--- a/components/css/sass/_variables.scss
+++ b/components/css/sass/_variables.scss
@@ -3,15 +3,15 @@
 
 @font-face {
   font-family: 'TradeGothic-Condensed';
-  src: url('http://www.tippie.uiowa.edu/includes/fonts/LTe50535.eot'); /* IE9 Compat Modes */
-  src: url('http://www.tippie.uiowa.edu/includes/fonts/LTe50535.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('http://www.tippie.uiowa.edu/includes/fonts/TradeGothic-Condensed.woff') format('woff'), /* Modern Browsers */
-  url('http://www.tippie.uiowa.edu/includes/fonts/TradeGothic-Condensed.ttf')  format('truetype'), /* Safari, Android, iOS */
-  url('http://www.tippie.uiowa.edu/includes/fonts/TradeGothic-Condensed.svg#svgFontName') format('svg'); /* Legacy iOS */
+  src: url('fonts/LTe50535.eot'); /* IE9 Compat Modes */
+  src: url('fonts/LTe50535.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('fonts/TradeGothic-Condensed.woff') format('woff'), /* Modern Browsers */
+  url('fonts/TradeGothic-Condensed.ttf')  format('truetype'), /* Safari, Android, iOS */
+  url('fonts/TradeGothic-Condensed.svg#svgFontName') format('svg'); /* Legacy iOS */
   font-style: normal;
 }
 
-$font-google-prim : 'http://fonts.googleapis.com/css?family=Lato:100,300,400';
+$font-google-prim : 'https://fonts.googleapis.com/css?family=Lato:100,300,400';
 @if variable-exists(font-google-prim) {
   @import url($font-google-prim);
 }
